Readme.md editing

--- a/README.html
+++ b/README.html
@@ -123,9 +123,8 @@ $(document).ready(function () {
 <h1>R Packages Trends</h1>
 <div id="understanding-trends-and-comparing-popularity-of-r-packages" class="section level2">
 <h2>Understanding trends and comparing popularity of R packages</h2>
-<p>Ever wondered how a certain technology is being adopted by the R community?</p>
-<p>Ever wanted to know how a specific package is downloaded among different countries, or in different time periods?</p>
-<p>In order to answer those questions and similar ones, I’ve created the <strong>rtrends</strong> package (uploaded on the 7th of December 2016 to CRAN).</p>
+<p><strong>rtrends</strong> package has several functions, but the most important one (in my opinion) is <strong>cran_stats_by_packages</strong> which alows you to get CRAN downloads information for a range of dates and for a list of packages. This functionality is quite similar to the one offered by Google trends.</p>
+<p>One of the advantages of rtrends is that it allows you to understand how certain technologies are being implemented among R users (in contrast to Google trends, where you are not always sure if a specific search relates to a specific technology or to some other unrelated issue).</p>
 </div>
 </div>
 
